// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot on "DESKTOP" 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FooterBarComponent>
      <FadeIn>
        <div>
          <div
            key=".0"
            style={
              Object {
                "opacity": 0,
                "transform": "translateY(20px)",
                "transition": "opacity 400ms, transform 400ms",
              }
            }
          >
            <Responsiveness
              desktop={<FooterBarDesktop />}
              mobile={<FooterBarMobile />}
            >
              <Desktop>
                <FooterBarDesktop>
                  <styled.div>
                    <div
                      className="sc-dlnjwi kZlaPJ"
                    >
                      <styled.div>
                        <div
                          className="sc-gtsrHT erdGqr"
                        >
                          <LightNinjaPrepLogo
                            height={70}
                            width={160}
                          >
                            <svg
                              height={70}
                              viewBox="0 0 200 57"
                              width={160}
                            >
                              <g
                                data-name="Group 120"
                                id="Group_120"
                                transform="translate(-1157 -10208)"
                              >
                                <text
                                  fill="#f9fbfd"
                                  fontFamily="SourceSansPro-Bold, Source Sans Pro"
                                  fontSize="40"
                                  fontWeight="700"
                                  id="NinjaPrep"
                                  transform="translate(1157 10249)"
                                >
                                  <tspan
                                    x="0"
                                    y="0"
                                  >
                                    NinjaPrep
                                  </tspan>
                                </text>
                                <circle
                                  cx="7.5"
                                  cy="7.5"
                                  data-name="Ellipse 44"
                                  fill="#25d0f3"
                                  id="Ellipse_44"
                                  r="7.5"
                                  transform="translate(1342 10237)"
                                />
                              </g>
                            </svg>
                          </LightNinjaPrepLogo>
                        </div>
                      </styled.div>
                    </div>
                  </styled.div>
                </FooterBarDesktop>
              </Desktop>
              <Mobile />
            </Responsiveness>
          </div>
        </div>
      </FadeIn>
    </FooterBarComponent>
  </Router>
</Provider>
`;

exports[`matches snapshot on "MOBILE" 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FooterBarComponent>
      <FadeIn>
        <div>
          <div
            key=".0"
            style={
              Object {
                "opacity": 0,
                "transform": "translateY(20px)",
                "transition": "opacity 400ms, transform 400ms",
              }
            }
          >
            <Responsiveness
              desktop={<FooterBarDesktop />}
              mobile={<FooterBarMobile />}
            >
              <Desktop />
              <Mobile>
                <FooterBarMobile>
                  <Styled(Navbar)>
                    <Navbar
                      className="sc-eCApnc cJIsJR"
                      collapseOnSelect={false}
                      expand={true}
                      variant="light"
                    >
                      <nav
                        className="sc-eCApnc cJIsJR navbar navbar-expand navbar-light"
                      >
                        <span>
                          Copyright © 2020 NinjaPrep
                        </span>
                        <span>
                          |
                        </span>
                        <Styled(Link)
                          to="/about"
                        >
                          <Link
                            className="sc-hKFxyN dqDhsQ"
                            to="/about"
                          >
                            <LinkAnchor
                              className="sc-hKFxyN dqDhsQ"
                              href="/about"
                              navigate={[Function]}
                            >
                              <a
                                className="sc-hKFxyN dqDhsQ"
                                href="/about"
                                onClick={[Function]}
                              >
                                About
                              </a>
                            </LinkAnchor>
                          </Link>
                        </Styled(Link)>
                        <span>
                          |
                        </span>
                        <Styled(Link)
                          to="/premium"
                        >
                          <Link
                            className="sc-hKFxyN dqDhsQ"
                            to="/premium"
                          >
                            <LinkAnchor
                              className="sc-hKFxyN dqDhsQ"
                              href="/premium"
                              navigate={[Function]}
                            >
                              <a
                                className="sc-hKFxyN dqDhsQ"
                                href="/premium"
                                onClick={[Function]}
                              >
                                Premium
                              </a>
                            </LinkAnchor>
                          </Link>
                        </Styled(Link)>
                        <span>
                          |
                        </span>
                        <Styled(Link)
                          to="/roadmap"
                        >
                          <Link
                            className="sc-hKFxyN dqDhsQ"
                            to="/roadmap"
                          >
                            <LinkAnchor
                              className="sc-hKFxyN dqDhsQ"
                              href="/roadmap"
                              navigate={[Function]}
                            >
                              <a
                                className="sc-hKFxyN dqDhsQ"
                                href="/roadmap"
                                onClick={[Function]}
                              >
                                Roadmap
                              </a>
                            </LinkAnchor>
                          </Link>
                        </Styled(Link)>
                      </nav>
                    </Navbar>
                  </Styled(Navbar)>
                </FooterBarMobile>
              </Mobile>
            </Responsiveness>
          </div>
        </div>
      </FadeIn>
    </FooterBarComponent>
  </Router>
</Provider>
`;

exports[`matches snapshot on "TABLET" 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FooterBarComponent>
      <FadeIn>
        <div>
          <div
            key=".0"
            style={
              Object {
                "opacity": 0,
                "transform": "translateY(20px)",
                "transition": "opacity 400ms, transform 400ms",
              }
            }
          >
            <Responsiveness
              desktop={<FooterBarDesktop />}
              mobile={<FooterBarMobile />}
            >
              <Desktop />
              <Mobile>
                <FooterBarMobile>
                  <Styled(Navbar)>
                    <Navbar
                      className="sc-eCApnc cJIsJR"
                      collapseOnSelect={false}
                      expand={true}
                      variant="light"
                    >
                      <nav
                        className="sc-eCApnc cJIsJR navbar navbar-expand navbar-light"
                      >
                        <span>
                          Copyright © 2020 NinjaPrep
                        </span>
                        <span>
                          |
                        </span>
                        <Styled(Link)
                          to="/about"
                        >
                          <Link
                            className="sc-hKFxyN dqDhsQ"
                            to="/about"
                          >
                            <LinkAnchor
                              className="sc-hKFxyN dqDhsQ"
                              href="/about"
                              navigate={[Function]}
                            >
                              <a
                                className="sc-hKFxyN dqDhsQ"
                                href="/about"
                                onClick={[Function]}
                              >
                                About
                              </a>
                            </LinkAnchor>
                          </Link>
                        </Styled(Link)>
                        <span>
                          |
                        </span>
                        <Styled(Link)
                          to="/premium"
                        >
                          <Link
                            className="sc-hKFxyN dqDhsQ"
                            to="/premium"
                          >
                            <LinkAnchor
                              className="sc-hKFxyN dqDhsQ"
                              href="/premium"
                              navigate={[Function]}
                            >
                              <a
                                className="sc-hKFxyN dqDhsQ"
                                href="/premium"
                                onClick={[Function]}
                              >
                                Premium
                              </a>
                            </LinkAnchor>
                          </Link>
                        </Styled(Link)>
                        <span>
                          |
                        </span>
                        <Styled(Link)
                          to="/roadmap"
                        >
                          <Link
                            className="sc-hKFxyN dqDhsQ"
                            to="/roadmap"
                          >
                            <LinkAnchor
                              className="sc-hKFxyN dqDhsQ"
                              href="/roadmap"
                              navigate={[Function]}
                            >
                              <a
                                className="sc-hKFxyN dqDhsQ"
                                href="/roadmap"
                                onClick={[Function]}
                              >
                                Roadmap
                              </a>
                            </LinkAnchor>
                          </Link>
                        </Styled(Link)>
                      </nav>
                    </Navbar>
                  </Styled(Navbar)>
                </FooterBarMobile>
              </Mobile>
            </Responsiveness>
          </div>
        </div>
      </FadeIn>
    </FooterBarComponent>
  </Router>
</Provider>
`;
